--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 HOST=nginx
 PORT=3000
 URL=http://localhost:3000
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=wendb
 POSTGRES_USER=wenadmin
