--- a/package.json
+++ b/package.json
@@ -102,11 +102,8 @@
     "prebuild:main": "webpack -p --config ./client/main/webpack/main.prebuild.webpack.config.js",
     "static": "npm run build && node server/static.server.js",
     "socket": "node server/socket.server.js",
-    "test": "npm run test:server && npm run test:common && npm run test:client",
-    "test:client": "mocha --require ./client/test/init.babel.js \"./client/**/*.test.js*\"",
-    "test:common": "jest --config jest.json",
-    "test:integration": "mocha --require ./server/test/init.js \"./server/**/*.spec.js*\"",
-    "test:server": "mocha --require ./server/test/init.js \"./server/**/*.test.js*\"",
+    "test": "jest --coverage --config jest.json",
+    "test:integration": "jest --coverage --config jest.spec.json",
     "watch:api": "nodemon -L --ignore client/ --ignore build/ --ignore server/static.server.js -e js,json,graphqls server/api.server.js",
     "watch:socket": "nodemon -L --ignore client/ --ignore build/ --ignore server/static.server.js -e js,json,graphqls server/socket.server.js",
     "watch:static": "npm run prebuild && concurrently \"npm run watch:static:login\" \"npm run watch:static:main\" \"npm run watch:static:server\"",
