--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,10 @@
 stages:
   - test
-  - build
   - deploy
 
 test:
   stage: test
-  script: echo "Running tests"
-  tags:
-    - wen
-
-build:
-  stage: build
-  script: echo "Building the app"
-  tags:
-    - wen
-
-deploy_review:
-  stage: deploy
-  script:
-    - echo "Deploy a review app"
-  environment:
-    name: review/$CI_COMMIT_REF_NAME
-    url: https://$CI_ENVIRONMENT_SLUG.example.com
-  only:
-    - branches
-  except:
-    - master
+  script: bash test.sh
   tags:
     - wen
 
@@ -35,19 +14,7 @@ deploy_staging:
     - echo "Deploy to staging server"
   environment:
     name: staging
-    url: https://staging.example.com
-  only:
-    - master
-  tags:
-    - wen
-
-deploy_prod:
-  stage: deploy
-  script:
-    - echo "Deploy to production server"
-  environment:
-    name: production
-    url: https://example.com
+    url: https://wen.moiden.com
   when: manual
   only:
     - master
