Add stage script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ test:
 deploy_staging:
   stage: deploy
   script:
-    - echo "Deploy to staging server"
+    - bash prod.sh up
   environment:
     name: staging
     url: https://wen.moiden.com
