Create app image

--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 HOST=nginx
 PORT=3000
-URL=http://localhost:3000
+SOCKET_URL=ws://localhost:3000
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=wendb
@@ -14,4 +14,4 @@ SELENIUM_PORT=4444
 REDIS_HOST=redis
 REDIS_PORT=6379
 APP_NAME=Wen
-NODE_ENV=development
+NODE_ENV=production
