--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 HOST=nginx
 PORT=3000
-URL=localhost:3000
+SOCKET_URL=ws://localhost:3000
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=wendb
