--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,18 +2,30 @@ version: '2'
 
 services:
   api:
+    build:
+      context: .
+      dockerfile: ./dockerfiles/prod/Dockerfile
     env_file: .env.prod
     command: npm run api
 
   static:
+    build:
+      context: .
+      dockerfile: ./dockerfiles/prod/Dockerfile
     env_file: .env.prod
     command: npm run static
 
   socket:
+    build:
+      context: .
+      dockerfile: ./dockerfiles/prod/Dockerfile
     env_file: .env.prod
     command: npm run socket
 
   runner:
+    build:
+      context: .
+      dockerfile: ./dockerfiles/prod/Dockerfile
     env_file: .env.prod
     command: npm run bootstrap
 
