--- a/dockerfiles/dev/Dockerfile
+++ b/dockerfiles/dev/Dockerfile
@@ -1,6 +1,10 @@
-FROM node:7.9.0
+FROM node:7.10-alpine
+
+RUN apk add --no-cache make gcc g++ python bash
 
 WORKDIR /usr/src/app
-COPY package.json .
+
 COPY yarn.lock .
+COPY package.json .
+
 RUN yarn
