Add integration test to test pipeline

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,8 @@
 HOST=nginx
 PORT=3000
-SOCKET_URL=ws://localhost:3000
-POSTGRES_HOST=postgres
+SOCKET_HOST=socket
+SOCKET_PORT=3000
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=wendb
 POSTGRES_USER=wenadmin
