--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
 HOST=nginx
 PORT=3000
-SOCKET_URL=wss://wen.moiden.com
+SOCKET_HOST=socket
+SOCKET_PORT=3000
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=wendb
