--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "0.4.1",
     "bulmaswatch": "0.4.1",
     "classnames": "2.2.5",
+    "cookie": "0.3.1",
     "font-awesome": "4.7.0",
     "graphql": "0.9.6",
     "graphql-redis-subscriptions": "1.1.6",
@@ -49,6 +50,13 @@
   "devDependencies": {
     "@types/jest": "^19.2.3",
     "@types/react": "15.0.25",
+    "@types/node": "^7.0.23",
+    "@types/supertest": "^2.0.0",
+    "@types/enzyme": "^2.8.0",
+    "@types/react-dom": "^15.5.0",
+    "@types/koa": "^2.0.39",
+    "@types/koa-router": "^7.0.22",
+    "@types/sequelize": "^4.0.55",
     "assets-webpack-plugin": "3.5.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
@@ -103,7 +111,7 @@
     "static": "node server/static.server.js",
     "socket": "node server/socket.server.js",
     "test": "jest --config jest.json",
-    "test:integration": "jest --coverage --config jest.spec.json",
+    "test:watch": "jest --watch --config jest.json",
     "watch:api": "nodemon -L --ignore client/ --ignore build/ --ignore server/static.server.js -e js,json,graphqls server/api.server.js",
     "watch:socket": "nodemon -L --ignore client/ --ignore build/ --ignore server/static.server.js -e js,json,graphqls server/socket.server.js",
     "watch:static": "npm run prebuild && concurrently \"npm run watch:static:login\" \"npm run watch:static:main\" \"npm run watch:static:server\"",
