--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "apollo-local-query": "0.3.0",
     "apollo-resolvers": "1.0.2",
     "bcrypt": "1.0.2",
-    "bulma": "0.4.1",
+    "bulma": "0.4.2",
     "bulmaswatch": "0.4.1",
     "classnames": "2.2.5",
     "cookie": "0.3.1",
@@ -19,46 +19,46 @@
     "graphql-tag": "2.0.0",
     "graphql-tools": "0.11.0",
     "isomorphic-fetch": "2.2.1",
-    "jsonwebtoken": "7.4.0",
+    "jsonwebtoken": "7.4.1",
     "koa": "2.2.0",
     "koa-body": "2",
     "koa-compose": "4.0.0",
-    "koa-helmet": "3.1.0",
-    "koa-logger": "2",
+    "koa-helmet": "3.2.0",
+    "koa-logger": "3.0.0",
     "koa-mount": "3.0.0",
-    "koa-router": "7.1.1",
+    "koa-router": "7.2.0",
     "koa-send": "4.1.0",
     "koa-websocket": "4.0.0",
-    "pg": "6.1.5",
+    "pg": "6.2.3",
     "pg-hstore": "2.3.2",
     "preact": "8.1.0",
     "preact-compat": "3.16.0",
-    "prop-types": "15.5.8",
+    "prop-types": "15.5.10",
     "react": "15.5.4",
     "react-apollo": "1.2.0",
     "react-dom": "15.5.4",
-    "react-redux": "5.0.4",
+    "react-redux": "5.0.5",
     "react-router": "4.1.1",
     "react-router-dom": "4.1.1",
     "recompose": "0.23.4",
     "redux": "3.6.0",
     "redux-act": "1.2.0",
-    "redux-form": "6.6.3",
+    "redux-form": "6.7.0",
     "redux-saga": "0.15.3",
     "sequelize": "3.30.4",
     "subscriptions-transport-ws": "0.6.0",
     "validator": "7.0.0"
   },
   "devDependencies": {
-    "@types/enzyme": "^2.8.0",
-    "@types/jest": "^19.2.3",
-    "@types/koa": "^2.0.39",
-    "@types/koa-router": "^7.0.22",
-    "@types/node": "^7.0.23",
+    "@types/enzyme": "2.8.0",
+    "@types/jest": "19.2.4",
+    "@types/koa": "2.0.39",
+    "@types/koa-router": "7.0.22",
+    "@types/node": "7.0.23",
     "@types/react": "15.0.25",
-    "@types/react-dom": "^15.5.0",
-    "@types/sequelize": "^4.0.55",
-    "@types/supertest": "^2.0.0",
+    "@types/react-dom": "15.5.0",
+    "@types/sequelize": "4.0.55",
+    "@types/supertest": "2.0.0",
     "assets-webpack-plugin": "3.5.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
@@ -68,12 +68,13 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.23.0",
-    "babel-preset-env": "1.4.0",
+    "babel-preset-env": "1.5.1",
     "babel-preset-react": "6.24.1",
     "babel-register": "6.24.1",
+    "chimp": "0.49.0",
     "compression-webpack-plugin": "0.4.0",
     "concurrently": "3.4.0",
-    "css-loader": "0.28.1",
+    "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "enzyme": "2.8.2",
     "eslint": "3.19.0",
@@ -84,18 +85,19 @@
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "jest": "20.0.4",
-    "koa-webpack": "0.4.0",
-    "node-sass": "4.5.2",
+    "koa-webpack": "0.5.1",
+    "node-sass": "4.5.3",
     "nodemon": "1.11.0",
     "react-addons-test-utils": "15.5.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
     "redux-devtools-extension": "2.13.2",
-    "sass-loader": "6.0.3",
-    "style-loader": "0.17.0",
+    "sass-loader": "6.0.5",
+    "style-loader": "0.18.1",
     "supertest": "3.0.0",
     "url-loader": "0.5.8",
-    "webpack": "2.5.1",
+    "wait-on": "2.0.2",
+    "webpack": "2.6.1",
     "webpack-node-externals": "1.6.0"
   },
   "license": "ISC",
@@ -109,16 +111,21 @@
     "build:login": "webpack -p --config ./client/login/webpack/login.prod.webpack.config.js",
     "build:main": "webpack -p --config ./client/main/webpack/main.prod.webpack.config.js",
     "generateSchema": "node scripts/generateSchema.js",
-    "lint-js": "eslint . --ext .js,.jsx --fix",
+    "lint:js": "eslint . --ext .js,.jsx",
+    "lint:js:fix": "eslint . --ext .js,.jsx --fix",
     "static": "node server/static.server.js",
     "socket": "node server/socket.server.js",
-    "test": "npm run bootstrap && jest --config jest.json",
+    "test": "npm run lint:js && npm run bootstrap && jest --config jest.json && npm run e2e",
     "test:watch": "jest --watch --config jest.json",
-    "watch:api": "nodemon -L --ignore client/ --ignore build/ --ignore server/static.server.js -e js,json,graphqls server/api.server.js",
-    "watch:socket": "nodemon -L --ignore client/ --ignore build/ --ignore server/static.server.js -e js,json,graphqls server/socket.server.js",
+    "e2e:chimp": "chimp",
+    "e2e:chimp:watch": "chimp --watch",
+    "e2e": "node ./scripts/run_chimp.js",
+    "e2e:watch": "node ./scripts/run_chimp.js --watch",
+    "watch:api": "nodemon -L --ignore client/ --ignore build/ --ignore e2e/ --ignore server/static.server.js -e js,json,graphqls server/api.server.js",
+    "watch:socket": "nodemon -L --ignore client/ --ignore build/ --ignore e2e/ --ignore server/static.server.js -e js,json,graphqls server/socket.server.js",
     "watch:static": "npm run prebuild && concurrently \"npm run watch:static:login\" \"npm run watch:static:main\" \"npm run watch:static:server\"",
     "watch:static:login": "webpack -w --watch-poll --config ./client/login/webpack/login.prebuild.webpack.config.js",
     "watch:static:main": "webpack -w --watch-poll --config ./client/main/webpack/main.prebuild.webpack.config.js",
-    "watch:static:server": "nodemon -L --ignore client/ --ignore build/ server/static.server.js"
+    "watch:static:server": "nodemon -L --ignore client/ --ignore build/ --ignore e2e/ server/static.server.js"
   }
 }
