--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "koa-websocket": "4.0.0",
     "pg": "6.1.5",
     "pg-hstore": "2.3.2",
+    "preact": "8.1.0",
+    "preact-compat": "3.16.0",
     "prop-types": "15.5.8",
     "react": "15.5.4",
     "react-apollo": "1.2.0",
@@ -48,15 +50,15 @@
     "validator": "7.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^19.2.3",
-    "@types/react": "15.0.25",
-    "@types/node": "^7.0.23",
-    "@types/supertest": "^2.0.0",
     "@types/enzyme": "^2.8.0",
-    "@types/react-dom": "^15.5.0",
+    "@types/jest": "^19.2.3",
     "@types/koa": "^2.0.39",
     "@types/koa-router": "^7.0.22",
+    "@types/node": "^7.0.23",
+    "@types/react": "15.0.25",
+    "@types/react-dom": "^15.5.0",
     "@types/sequelize": "^4.0.55",
+    "@types/supertest": "^2.0.0",
     "assets-webpack-plugin": "3.5.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
