--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulmaswatch": "0.4.1",
     "classnames": "2.2.5",
     "cookie": "0.3.1",
+    "es6-error": "4.0.2",
     "font-awesome": "4.7.0",
     "graphql": "0.9.6",
     "graphql-redis-subscriptions": "1.1.6",
@@ -113,19 +114,22 @@
     "generateSchema": "node scripts/generateSchema.js",
     "lint:js": "eslint . --ext .js,.jsx",
     "lint:js:fix": "eslint . --ext .js,.jsx --fix",
-    "static": "node server/static.server.js",
+    "static": "node static/static.server.js",
     "socket": "node server/socket.server.js",
-    "test": "npm run lint:js && npm run bootstrap && jest --config jest.json && npm run e2e",
-    "test:watch": "jest --watch --config jest.json",
+    "test": "npm run lint:js && npm run bootstrap && npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:unit": "jest --config jest.unit.json",
+    "test:unit:watch": "jest --watch --config jest.unit.json",
+    "test:integration": "jest --config jest.integration.json",
+    "test:integration:watch": "jest --watch --config jest.integration.json",
     "e2e:chimp": "chimp",
     "e2e:chimp:watch": "chimp --watch",
-    "e2e": "node ./scripts/run_chimp.js",
-    "e2e:watch": "node ./scripts/run_chimp.js --watch",
-    "watch:api": "nodemon -L --ignore client/ --ignore build/ --ignore e2e/ --ignore server/static.server.js -e js,json,graphqls server/api.server.js",
-    "watch:socket": "nodemon -L --ignore client/ --ignore build/ --ignore e2e/ --ignore server/static.server.js -e js,json,graphqls server/socket.server.js",
+    "test:e2e": "node ./scripts/run_chimp.js",
+    "test:e2e:watch": "node ./scripts/run_chimp.js --watch",
+    "watch:api": "nodemon -L --watch server --watch common -e js,json,graphqls --ignore '**/test/*' server/api.server.js",
+    "watch:socket": "nodemon -L --watch server --watch common --ignore '**/test/*' -e js,json,graphqls server/socket.server.js",
     "watch:static": "npm run prebuild && concurrently \"npm run watch:static:login\" \"npm run watch:static:main\" \"npm run watch:static:server\"",
     "watch:static:login": "webpack -w --watch-poll --config ./client/login/webpack/login.prebuild.webpack.config.js",
     "watch:static:main": "webpack -w --watch-poll --config ./client/main/webpack/main.prebuild.webpack.config.js",
-    "watch:static:server": "nodemon -L --ignore client/ --ignore build/ --ignore e2e/ server/static.server.js"
+    "watch:static:server": "nodemon -L --ignore '**/test/*' --watch common --watch static static/static.server.js"
   }
 }
