--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "lint:js:fix": "eslint . --ext .js,.jsx --fix",
     "static": "node static/static.server.js",
     "socket": "node server/socket.server.js",
-    "test": "npm run lint:js && npm run bootstrap && npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test": "npm run lint:js && npm run test:unit && npm run bootstrap  && npm run test:integration && npm run test:e2e",
     "test:unit": "jest --config jest.unit.json",
     "test:unit:watch": "jest --watch --config jest.unit.json",
     "test:integration": "jest --config jest.integration.json",
