Add cleanup script

--- a/package.json
+++ b/package.json
@@ -119,8 +119,8 @@
     "test": "npm run lint:js && npm run test:unit && npm run bootstrap  && npm run test:integration && npm run test:e2e",
     "test:unit": "jest --forceExit --config jest.unit.json",
     "test:unit:watch": "jest --watch --config jest.unit.json",
-    "test:integration": "jest --config jest.integration.json",
-    "test:integration:watch": "jest --watch --config jest.integration.json",
+    "test:integration": "jest --runInBand --config jest.integration.json",
+    "test:integration:watch": "jest --runInBand --watch --config jest.integration.json",
     "e2e:chimp": "chimp",
     "e2e:chimp:watch": "chimp --watch",
     "test:e2e": "node ./scripts/run_chimp.js",
