--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "5.0.5",
     "react-router": "4.1.1",
     "react-router-dom": "4.1.1",
+    "react-router-redux": "next",
     "recompose": "0.23.4",
     "redux": "3.6.0",
     "redux-act": "1.2.0",
