--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react-dom": "15.5.0",
     "@types/sequelize": "4.0.55",
     "@types/supertest": "2.0.0",
+    "@types/webdriverio": "4.7.1",
     "assets-webpack-plugin": "3.5.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
@@ -122,8 +123,8 @@
     "test:unit:watch": "jest --watch --config jest.unit.json",
     "test:integration": "jest --runInBand --forceExit --config jest.integration.json",
     "test:integration:watch": "jest --runInBand --watch --config jest.integration.json",
-    "e2e:chimp": "chimp",
-    "e2e:chimp:watch": "chimp --watch",
+    "chimp": "chimp",
+    "chimp:watch": "chimp --watch",
     "test:e2e": "node ./scripts/runChimp.js",
     "test:e2e:watch": "node ./scripts/runChimp.js --watch",
     "watch:api": "nodemon -L --watch server --watch common -e js,json,graphqls --ignore '**/test/*' --ignore '**/spec/*' server/api.server.js",
