--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "document": true,
     "location": true,
     "fetch": true,
-    "PREBUILD": true
+    "PREBUILD": true,
+    "$": true,
   },
   "parser": "babel-eslint",
   "extends": "airbnb",
