--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,11 +2,11 @@ version: '2'
 
 services:
   selenium:
-    image: selenium/standalone-chrome-debug
+    image: selenium/standalone-chrome-debug:3.4.0
     ports:
       - '5900:5900'
     links:
-      - nginx
+      - nginx:wen.com
 
   api:
     build:
