--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "react-redux": "5.0.5",
     "react-router": "4.1.1",
     "react-router-dom": "4.1.1",
-    "react-router-redux": "next",
     "recompose": "0.23.4",
     "redux": "3.6.0",
     "redux-act": "1.2.0",
@@ -50,6 +49,7 @@
     "redux-saga": "0.15.3",
     "sequelize": "3.30.4",
     "subscriptions-transport-ws": "0.6.0",
+    "uuid": "3.0.1",
     "validator": "7.0.0"
   },
   "devDependencies": {
