Raise jasmine timeout up to 10 sec

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "location": true,
     "fetch": true,
     "PREBUILD": true,
-    "$": true,
+    "jasmine": true
   },
   "parser": "babel-eslint",
   "extends": "airbnb",
