Add backend service tests

--- a/.env.dev.test
+++ b/.env.dev.test
@@ -12,7 +12,7 @@ AUTH_COOKIE=wen
 JWT_SECRET=CR2GqHxwW4F@?u-a
 SELENIUM_HOST=selenium
 SELENIUM_PORT=4444
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 APP_NAME=Wen
 NODE_ENV=development
