--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "compression-webpack-plugin": "0.4.0",
     "concurrently": "3.4.0",
     "css-loader": "0.28.4",
+    "deep-freeze": "0.0.1",
     "dotenv": "4.0.0",
     "enzyme": "2.8.2",
     "eslint": "3.19.0",
@@ -96,6 +97,7 @@
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
     "redux-devtools-extension": "2.13.2",
+    "redux-saga-test-plan": "3.1.0",
     "sass-loader": "6.0.5",
     "style-loader": "0.18.1",
     "supertest": "3.0.0",
