--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "assets-webpack-plugin": "3.5.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
     "babel-plugin-dynamic-import-node": "1.0.2",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
@@ -82,6 +83,7 @@
     "deep-freeze": "0.0.1",
     "dotenv": "4.0.0",
     "enzyme": "2.8.2",
+    "enzyme-to-json": "1.5.1",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-import": "2.2.0",
@@ -90,6 +92,7 @@
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "jest": "20.0.4",
+    "jest-transform-graphql": "2.1.0",
     "koa-webpack": "0.5.1",
     "node-sass": "4.5.3",
     "nodemon": "1.11.0",
@@ -123,7 +126,7 @@
     "static": "node static/static.server.js",
     "socket": "node server/socket.server.js",
     "test": "npm run lint:js && npm run test:unit && npm run bootstrap && npm run test:integration && npm run test:e2e",
-    "test:unit": "jest --forceExit --config jest.unit.json",
+    "test:unit": "NODE_ENV=test jest --forceExit --config jest.unit.json",
     "test:unit:watch": "jest --watch --config jest.unit.json",
     "test:integration": "jest --runInBand --forceExit --config jest.integration.json",
     "test:integration:watch": "jest --runInBand --watch --config jest.integration.json",
