--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,6 +27,11 @@ services:
       context: .
       dockerfile: ./dockerfiles/prod/Dockerfile
     env_file: .env.prod
+    depends_on:
+      - api
+      - socket
+      - static
+      - nginx
     command: yarn run bootstrap
 
   nginx:
