--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,7 +2,9 @@ version: '2'
 
 services:
   selenium:
-    image: selenium/standalone-chrome:3.4.0
+    image: selenium/standalone-chrome-debug:3.4.0
+    ports:
+      - '5900:5900'
     links:
       - nginx
 
@@ -32,7 +34,6 @@ services:
       context: .
       dockerfile: ./dockerfiles/prod/Dockerfile
     env_file: .env.prod
-    command: /bin/true
     links:
       - selenium
 
