Add pipe based services

--- a/dockerfiles/dev/Dockerfile
+++ b/dockerfiles/dev/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:7.10-alpine
 
-RUN apk add --no-cache make gcc g++ python bash
+RUN apk add --no-cache build-base make gcc g++ python bash
 
 WORKDIR /usr/src/app
 
@@ -8,3 +8,4 @@ COPY yarn.lock .
 COPY package.json .
 
 RUN yarn
+RUN npm rebuild bcrypt --build-from-source
