--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-apollo": "1.2.0",
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
+    "react-remarkable": "1.1.1",
+    "react-render-html": "0.5.0",
     "react-router": "4.1.1",
     "react-router-dom": "4.1.1",
     "recompose": "0.23.5",
